--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-ses": "^3.42.0",
+    "aws-sdk": "^2.1036.0",
     "next": "12.0.4",
     "react": "17.0.2",
     "react-dom": "17.0.2"
