--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "axios": "^0.24.0",
     "next": "12.0.4",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sweetalert2": "^11.3.0"
   },
   "devDependencies": {
     "eslint": "7.32.0",
