--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "aws-sdk": "^2.1036.0",
     "axios": "^0.24.0",
+    "formidable": "^2.0.1",
     "next": "12.0.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
