--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-amplify/auth": "^4.3.19",
+    "@aws-amplify/core": "^4.3.11",
     "aws-sdk": "^2.1036.0",
     "axios": "^0.24.0",
     "next": "12.0.4",
